--- a/app/src/main/res/layout/activity_cheeses.xml
+++ b/app/src/main/res/layout/activity_cheeses.xml
@@ -27,7 +27,7 @@
         android:inputType="text"
         android:lines="1" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
